[package]
name = "minterest-chain"
version = "0.6.2"
authors = ["Minterest developers"]
edition = "2018"

[profile.dev]
opt-level = 0
panic = 'unwind'
overflow-checks = true

[profile.release]
opt-level = 3
panic = 'unwind'
overflow-checks = true

[[bin]]
name = "minterest"
path = "src/main.rs"

[dependencies]
cargo-audit = "0.14.0"
minterest-cli = { path = "cli" }
minterest-service = { path = "service" }
orml-oracle = "0.4.0"

[features]
runtime-benchmarks = [
    "minterest-cli/runtime-benchmarks",
]

[workspace]
members = [
    'cli',
    'rpc',
    'primitives',
    'service',
    'runtime',
    'test-helper',
    'pallets/liquidity-pools',
    'pallets/minterest-model',
    'pallets/minterest-protocol',
    'pallets/controller',
    'pallets/prices',
    'pallets/risk-manager',
    'pallets/liquidation-pools',
    'pallets/mnt-token',
    'pallets/dex',
]

