[package]
name = "minterest-chain"
version = "0.6.2"
authors = ["Minterest <https://github.com/minterest-defi>"]
edition = "2018"

[profile.dev]
opt-level = 0
panic = 'unwind'
overflow-checks = true

[profile.release]
opt-level = 3
panic = 'unwind'
overflow-checks = true

[[bin]]
name = "minterest"
path = "src/main.rs"

[dependencies]
cargo-audit = "0.14.0"
minterest-cli = { path = "cli" }
minterest-service = { path = "service" }

[features]
runtime-benchmarks = [
    "minterest-cli/runtime-benchmarks",
]

[workspace]
members = [
    'cli',
    'rpc',
    'primitives',
    'service',
    'runtime',
    'test-helper',
    'pallets/*',
]

