[package]
name = "minterest-chain"
version = "0.6.2"
authors = ["Minterest developers"]
edition = "2018"

[profile.dev]
opt-level = 0
panic = "unwind"
overflow-checks = true

[profile.release]
opt-level = 3
panic = "unwind"
overflow-checks = true

[[bin]]
name = "minterest"
path = "src/main.rs"

[dependencies]
cargo-audit = "0.14.0"
minterest-cli = { path = "cli" }
minterest-service = { path = "service" }
orml-oracle = "0.4.0"

[features]
runtime-benchmarks = [
    "minterest-cli/runtime-benchmarks",
]

[workspace]
members = [
    "cli",
    "rpc",
    "primitives",
    "service",
    "runtime/parachain",
    "runtime/standalone",
    "test-helper",
    "pallets/liquidity-pools",
    "pallets/minterest-model",
    "pallets/minterest-protocol",
    "pallets/controller",
    "pallets/prices",
    "pallets/risk-manager",
    "pallets/liquidation-pools",
    "pallets/mnt-token",
    "pallets/dex",
    "pallets/whitelist",
    "pallets/chainlink-price-manager",
]

[patch."https://github.com/paritytech/substrate"]
frame-benchmarking = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
frame-benchmarking-cli = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
frame-election-provider-support = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
frame-executive = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
frame-support = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
frame-support-procedural = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
frame-support-procedural-tools = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
frame-support-procedural-tools-derive = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
frame-system = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
frame-try-runtime = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
max-encoded-len = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
max-encoded-len-derive = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-aura = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-authority-discovery = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-authorship = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-babe = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-balances = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-bounties = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-collective = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-democracy = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-elections-phragmen = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-grandpa = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-identity = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-im-online = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-indices = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-membership = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-mmr = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-mmr-primitives = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-mmr-rpc = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-multisig = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-nicks = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-offences = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-proxy = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-recovery = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-scheduler = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-session = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-society = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-staking = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-staking-reward-curve = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-sudo = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-timestamp = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-tips = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-transaction-payment = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-treasury = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-utility = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-vesting = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
remote-externalities = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-authority-discovery = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-basic-authorship = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-block-builder = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-chain-spec = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-cli = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-client-api = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-client-db = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-consensus = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-consensus-aura = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-consensus-babe = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-consensus-epochs = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-consensus-slots = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-executor = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-executor-common = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-executor-wasmtime = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-finality-grandpa = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-finality-grandpa-warp-sync = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-informant = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-keystore = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-network = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-network-gossip = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-offchain = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-rpc = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-rpc-api = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-service = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-sync-state-rpc = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-telemetry = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-tracing = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-transaction-pool = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-api = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-application-crypto = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-arithmetic = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-authority-discovery = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-block-builder = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-blockchain = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-consensus = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-consensus-aura = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-consensus-babe = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-consensus-slots = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-consensus-vrf = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-core = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-debug-derive = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-externalities = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-finality-grandpa = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-inherents = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-io = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-keystore = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-maybe-compressed-blob = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-npos-elections = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-offchain = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-rpc = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-runtime = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-runtime-interface = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-serializer = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-session = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-staking = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-state-machine = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-std = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-storage = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-timestamp = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-tracing = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-transaction-pool = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-trie = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-utils = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-version = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-wasm-interface = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
substrate-build-script-utils = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
try-runtime-cli = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
frame-system-benchmarking = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-gilt = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-offences-benchmarking = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-session-benchmarking  = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
pallet-staking-reward-fn = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sc-consensus-uncles = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }
sp-authorship = { git = "https://github.com/paritytech//substrate", rev = "1b758b2a8d151d97d2242260c465b6df9cb8a7a4" }

