[package]
name = "minterest-cli"
version = "0.5.0"
authors = ["Minterest <https://github.com/minterest-defi>"]
edition = "2018"

[dependencies]
log = '0.4.14'
codec = { package = 'parity-scale-codec', version = '2.0.0' }
structopt = "0.3.8"
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", optional = true}
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.3' }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", optional = true}

sc-tracing = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.3' }
sc-telemetry = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.3' }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", optional = true}
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", optional = true}


# Cumulus dependencies
cumulus-client-consensus-aura = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.3' }
cumulus-client-consensus-common = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.3' }
cumulus-client-collator = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.3' }
cumulus-client-cli = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.3' }
cumulus-client-network = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.3' }
cumulus-client-service = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.3' }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.3' }
cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.3' }

# Polkadot dependencies
polkadot-primitives = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.3'}
polkadot-service = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.3'}
polkadot-cli = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.3'}
polkadot-test-service = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.3'}
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.3'}

# Local dependencies
node-minterest-runtime = { path = '../runtime' }
service = { package = "minterest-service", path = "../service", default-features = false, optional = true}


[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.3' }

[features]
default = ["wasmtime", "cli"]
wasmtime = [ "sc-cli/wasmtime" ]
cli = [
    "service",
    "sp-core",
    "sc-cli",
    "sc-service",
    "frame-benchmarking-cli",
]
runtime-benchmarks = [ "service/runtime-benchmarks" ]
