[package]
name = "minterest-cli"
version = "0.5.0"
authors = ["Minterest developers"]
edition = "2018"

[dependencies]
structopt = "0.3.8"
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", optional = true }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", optional = true }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", optional = true }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", optional = true }

service = { package = "minterest-service", path = "../service", default-features = false, optional = true }
node-minterest-runtime = { path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }

[features]
default = ["wasmtime", "cli"]
wasmtime = [ "sc-cli/wasmtime" ]
cli = [
    "service",
    "sp-core",
    "sc-cli",
    "sc-service",
    "frame-benchmarking-cli",
]
runtime-benchmarks = [ "service/runtime-benchmarks" ]
