[package]
name = "minterest-cli"
version = "0.5.0"
authors = ["Minterest developers"]
edition = "2018"

[dependencies]
structopt = "0.3.8"
codec = { package = "parity-scale-codec", version = "2.0.0" }
log = { version = "0.4.14", default-features = false }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", optional = true }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", optional = true }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", optional = true }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.8" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", optional = true }

# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.8" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.8" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.8" }

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.8" }

service = { package = "minterest-service", path = "../service", default-features = false, optional = true }
parachain-runtime = { path = "../runtime/parachain" }
standalone-runtime = { path = "../runtime/standalone" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }

[features]
default = [
    "wasmtime",
    "cli",
    "polkadot-cli/rococo-native",
]
wasmtime = [ "sc-cli/wasmtime" ]
cli = [
    "service",
    "sp-core",
    "sc-cli",
    "sc-service",
    "frame-benchmarking-cli",
]
runtime-benchmarks = [ "service/runtime-benchmarks" ]
