[package]
authors = ['Minterest <https://github.com/minterest-defi>']
build = 'build.rs'
description = 'A FRAME-based Substrate node.'
edition = '2018'
license = 'Unlicense'
name = 'node-minterest'
repository = 'https://github.com/minterest-defi/minterest-chain-node/'
version = '2.0.0'

[[bin]]
name = 'node-minterest'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '2.0.0'

[dependencies]
hex-literal = "0.3.1"
jsonrpc-core = '15.0.0'
structopt = '0.3.8'
serde_json = '1.0.41'

# local dependencies
node-minterest-runtime = { path = '../runtime', version = '2.0.0' }
minterest-primitives = { path = "../primitives", default-features = false }
liquidity-pools = {path = "../pallets/liquidity-pools", default-features = false}
controller = {path = "../pallets/controller", default-features = false}
minterest-model = {path = "../pallets/minterest-model", default-features = false}

# Substrate dependencies
frame-benchmarking = '2.0.0'
frame-benchmarking-cli = '2.0.0'
pallet-transaction-payment-rpc = '2.0.0'
sc-telemetry = { version = "2.0.0" }
sc-basic-authorship = '0.8.0'
sc-cli = { features = ['wasmtime'], version = '0.8.0' }
sc-client-api = '2.0.0'
sc-consensus = '0.8.0'
sc-consensus-aura = '0.8.0'
sc-executor = { features = ['wasmtime'], version = '0.8.0' }
sc-finality-grandpa = '0.8.0'
sc-rpc = '2.0.0'
sc-rpc-api = '0.8.0'
sc-service = { features = ['wasmtime'], version = '0.8.0' }
sc-transaction-pool = '2.0.0'
sp-api = '2.0.0'
sp-block-builder = '2.0.0'
sp-blockchain = '2.0.0'
sp-consensus = '0.8.0'
sp-consensus-aura = '0.8.0'
sp-core = '2.0.0'
sp-finality-grandpa = '2.0.0'
sp-inherents = '2.0.0'
sp-runtime = '2.0.0'
sp-transaction-pool = '2.0.0'
substrate-frame-rpc-system = '2.0.0'

[features]
default = []
runtime-benchmarks = ['node-minterest-runtime/runtime-benchmarks']
