[package]
name = "minterest-primitives"
version = "0.5.0"
authors = ['Minterest <https://github.com/minterest-defi>']
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
serde = { version = "1.0.101", optional = true }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-runtime/std",
    "serde",
    "sp-core/std",
    'sp-std/std',
    'frame-support/std',
]
