[package]
name = "minterest-primitives"
version = "0.5.0"
authors = ["Minterest <https://github.com/minterest-defi>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
serde = { version = "1.0.101", optional = true }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
smallvec = { default-features = false, version = "1.6.0" }
hex-literal = { version = "0.3.1" }

frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-runtime/std",
    "serde",
    "sp-core/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
]
