[package]
name = "minterest-rpc"
version = "0.5.0"
authors = ["Minterest developers"]
edition = "2018"

[dependencies]
jsonrpc-core = "15.0.0"
sp-api = { version = "3.0.0" }
sp-block-builder = { version = "3.0.0" }
sp-blockchain = { version = "3.0.0" }
sp-transaction-pool = { version = "3.0.0" }
sc-rpc-api = "0.9.0"
pallet-transaction-payment-rpc = { version = "3.0.0" }
substrate-frame-rpc-system = { version = "3.0.0" }
sc-rpc = { version = "3.0.0" }

orml-oracle-rpc = { version = "0.4.0" }

# local dependencies
node-minterest-runtime = { path = "../runtime", version = "0.6.0" }
controller-rpc = { path = "../pallets/controller/rpc" }
mnt-token-rpc = { path = "../pallets/mnt-token/rpc" }
prices-rpc = { path = "../pallets/prices/rpc" }
