[package]
name = "minterest-rpc"
version = "0.5.0"
authors = ["Minterest developers"]
edition = "2018"

[dependencies]
jsonrpc-core = "15.0.0"
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sc-rpc-api = "0.9.0"
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }

orml-oracle-rpc = { git = "https://github.com/open-web3-stack/open-runtime-module-library" }

# local dependencies
node-minterest-runtime = { path = "../runtime", version = "0.6.0" }
controller-rpc = { path = "../pallets/controller/rpc" }
mnt-token-rpc = { path = "../pallets/mnt-token/rpc" }
prices-rpc = { path = "../pallets/prices/rpc" }
