[package]
name = "minterest-rpc"
version = "0.5.0"
authors = ["Minterest developers"]
edition = "2018"

[dependencies]
jsonrpc-core = "15.0.0"
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }

orml-oracle-rpc = { git = "https://github.com/open-web3-stack/open-runtime-module-library" }

# local dependencies
parachain-runtime = { path = "../runtime/parachain", version = "0.6.0" }
controller-rpc = { path = "../pallets/controller/rpc" }
mnt-token-rpc = { path = "../pallets/mnt-token/rpc" }
prices-rpc = { path = "../pallets/prices/rpc" }
whitelist-rpc = { path = "../pallets/whitelist/rpc" }
